# beandb

./: README.en.md  README.md  bean.code-workspace  build.sh  build_examples.sh  build_ut.sh  doxy_gen.sh  run_examples.sh  run_ut.sh  todo_list.txt  ut_coverage.sh
doc/doxygen/: Doxyfile
examples/data/sqlite_db_1/: beandb.db
examples/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  version.h
src/org/jinsha/: Util.cpp  Util.h
src/org/jinsha/bean/: AbstractBeanDB.cpp  AbstractBeanDB.h  AbstractPage.h  Bean.cpp  Bean.h  BeanDB.cpp  BeanDB.h  BeanDBIntf.h  BeanDBPersistenceIntf.h  BeanDBUserIntf.h  BeanObject.cpp  BeanObject.h  BeanWorld.cpp  BeanWorld.h  Page.hpp  Property.cpp  Property.cpp.1  Property.h  Relation.cpp  Relation.h  SqliteBeanDB.cpp  SqliteBeanDB.h  SqlitePage.cpp  SqlitePage.h  common.h  internal_common.hxx
src/org/jinsha/beandb/: AbstractBeanDB.cpp  AbstractBeanDB.h  Bean.cpp  Bean.h  BeanWorld.cpp  BeanWorld.h  Page.hpp  Property.cpp  Property.h  SqliteBeanDB.cpp  SqliteBeanDB.h  common.h  internal_common.hxx
unit_test/data/db_dir/: beandb.db
unit_test/data/sqlite_db_1/: beandb.db
unit_test/src/: CMakeLists.txt  DummyBeanDB.cpp  DummyBeanDB.h  UT_Bean.cpp  UT_BeanIdPage.cpp  UT_BeanWorld.cpp  UT_Property.cpp  UT_SqiteBeanDB.cpp  common.cpp  common.h  ut_main.cpp
