CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(bean CXX)

add_definitions(-g -std=c++11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall --coverage")
set(BEAN_DEP_INC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/include)
set(3RDPARTY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/include/thirdParty/)
set(BEAN_DEP_LIB_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/libs)
set(BEAN_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB_RECURSE BEAN_SRC_FILES "*.cpp")

INCLUDE_DIRECTORIES(${BEAN_DEP_INC_PATH})
INCLUDE_DIRECTORIES(${3RDPARTY_PATH})
INCLUDE_DIRECTORIES(${ROADDB_CORE_INC_PATH})
INCLUDE_DIRECTORIES(${BEAN_SRC_PATH})

LINK_DIRECTORIES(${BEAN_DEP_LIB_PATH}/x64)

ADD_LIBRARY(bean SHARED ${BEAN_SRC_FILES})

#link libraries
set (BEAN_LINK_LIBRARY
    pthread
)

set (BEAN_SRV_LINK_LIBRARY
    pthread
)

TARGET_LINK_LIBRARIES(bean ${BEAN_LINK_LIBRARY})

