CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(beandb CXX)

add_definitions(-std=c++11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall  -O2")
set(BEANDB_DEP_INC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/include)
set(3RDPARTY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/include/thirdParty/)
set(BEANDB_DEP_LIB_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/libs)
set(BEANDB_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB_RECURSE BEANDB_SRC_FILES "*.cpp")

INCLUDE_DIRECTORIES(${BEANDB_DEP_INC_PATH})
INCLUDE_DIRECTORIES(${3RDPARTY_PATH})
INCLUDE_DIRECTORIES(${BEANDB_SRC_PATH})

LINK_DIRECTORIES(${BEANDB_DEP_LIB_PATH}/x64)

ADD_LIBRARY(beandb SHARED ${BEANDB_SRC_FILES})

#link libraries
set (BEANDB_LINK_LIBRARY
    sqlite3
)

TARGET_LINK_LIBRARIES(beandb ${BEANDB_LINK_LIBRARY})

