CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(beandb_example CXX)

add_definitions(-g -std=c++11)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")

set(BEANDB_INC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../dist/x64/include)
set(BEANDB_DEP_INC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../dependencies/include)
set(3RDPARTY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../dependencies/include/thirdParty/)
set(BEANDB_LIB_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../dist/x64/lib)
set(BEANDB_DEP_LIB_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../dependencies/libs)
set(EXAMPLE_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB_RECURSE EXAMPLE_SRC_FILES "*.cpp")

INCLUDE_DIRECTORIES(${BEANDB_INC_PATH})
INCLUDE_DIRECTORIES(${BEANDB_DEP_INC_PATH})
INCLUDE_DIRECTORIES(${3RDPARTY_PATH})
INCLUDE_DIRECTORIES(${BEAN_SRC_PATH})

LINK_DIRECTORIES(${BEANDB_DEP_LIB_PATH}/x64)
LINK_DIRECTORIES(${BEANDB_LIB_PATH})

ADD_EXECUTABLE(beandb_example ${EXAMPLE_SRC_FILES})

#link libraries
set (BEAN_LINK_LIBRARY
    beandb
    sqlite3
)

TARGET_LINK_LIBRARIES(beandb_example ${BEAN_LINK_LIBRARY})

