CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(beandb_examples CXX)

add_definitions(-g -std=c++11)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")

set(BEANDB_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../src)

set(BEANDB_INC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../dist/x64/include)
#set(BEANDB_INC_PATH ${BEANDB_SRC_PATH})

set(BEANDB_DEP_INC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../dependencies/include)
set(3RDPARTY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../dependencies/include/thirdParty/)
set(BEANDB_DEP_LIB_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../dependencies/libs)
set(EXAMPLE_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB_RECURSE EXAMPLE_SRC_FILES "*.cpp")
#file(GLOB_RECURSE BEANDB_SRC "${BEANDB_SRC_PATH}/org/jinsha/*.cpp" "${BEANDB_SRC_PATH}/org/jinsha/*.cc")

INCLUDE_DIRECTORIES(${BEANDB_INC_PATH})
INCLUDE_DIRECTORIES(${BEANDB_DEP_INC_PATH})
INCLUDE_DIRECTORIES(${3RDPARTY_PATH})

LINK_DIRECTORIES(
    ${BEANDB_DEP_LIB_PATH}/x64
    ${CMAKE_CURRENT_SOURCE_DIR}/../../dist/x64/lib
)

ADD_EXECUTABLE(beandb_examples ${EXAMPLE_SRC_FILES})
#ADD_EXECUTABLE(beandb_examples ${EXAMPLE_SRC_FILES}  ${BEANDB_SRC})

set (BEANDB_LINK_LIBRARY
    jsoncpp
    sqlite3
    beandb
    beandb-sqlite3
)

TARGET_LINK_LIBRARIES(beandb_examples ${BEANDB_LINK_LIBRARY})

